<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="265dp"
    android:layout_height="375dp"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/square1"
        style="@style/square_small"
        android:layout_marginEnd="45dp"
        app:layout_constraintBottom_toTopOf="@+id/connect_4_5"
        app:layout_constraintEnd_toStartOf="@+id/connect_2_5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/connect_1_4"
        app:layout_constraintTop_toBottomOf="@+id/connect_1_2"
        android:contentDescription="@string/square_1" />

    <ImageView
        android:id="@+id/square2"
        style="@style/square_small"
        android:contentDescription="@string/square_2"
        app:layout_constraintBottom_toTopOf="@+id/connect_5_6"
        app:layout_constraintEnd_toStartOf="@+id/connect_3_6"
        app:layout_constraintStart_toEndOf="@+id/connect_2_5"
        app:layout_constraintTop_toBottomOf="@+id/connect_2_3" />

    <ImageView
        android:id="@+id/square3"
        style="@style/square_small"
        android:contentDescription="@string/square_3"
        app:layout_constraintBottom_toTopOf="@+id/connect_7_8"
        app:layout_constraintEnd_toStartOf="@+id/connect_5_8"
        app:layout_constraintStart_toEndOf="@+id/connect_4_7"
        app:layout_constraintTop_toBottomOf="@+id/connect_4_5" />

    <ImageView
        android:id="@+id/square4"
        style="@style/square_small"
        android:contentDescription="@string/square_4"
        app:layout_constraintBottom_toTopOf="@+id/connect_8_9"
        app:layout_constraintEnd_toStartOf="@+id/connect_6_9"
        app:layout_constraintStart_toEndOf="@+id/connect_5_8"
        app:layout_constraintTop_toBottomOf="@+id/connect_5_6" />

    <ImageView
        android:id="@+id/square5"
        style="@style/square_small"
        android:contentDescription="@string/square_5"
        app:layout_constraintBottom_toTopOf="@+id/connect_10_11"
        app:layout_constraintEnd_toStartOf="@+id/connect_8_11"
        app:layout_constraintStart_toEndOf="@+id/connect_7_10"
        app:layout_constraintTop_toBottomOf="@+id/connect_7_8" />

    <ImageView
        android:id="@+id/square6"
        style="@style/square_small"
        android:contentDescription="@string/square_6"
        app:layout_constraintBottom_toTopOf="@+id/connect_11_12"
        app:layout_constraintEnd_toStartOf="@+id/connect_9_12"
        app:layout_constraintStart_toEndOf="@+id/connect_8_11"
        app:layout_constraintTop_toBottomOf="@+id/connect_8_9" />

    <ImageView
        android:id="@+id/connect_1_2"
        style="@style/connect_horizontal_small"
        android:contentDescription="@string/connect_circles_1_and_2"
        app:layout_constraintEnd_toStartOf="@id/circle2"
        app:layout_constraintStart_toEndOf="@id/circle1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/connect_2_3"
        style="@style/connect_horizontal_small"
        android:contentDescription="@string/connect_circles_2_and_3"
        app:layout_constraintEnd_toStartOf="@id/circle3"
        app:layout_constraintStart_toEndOf="@id/circle2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/connect_4_5"
        style="@style/connect_horizontal_small"
        android:layout_marginTop="110dp"
        android:contentDescription="@string/connect_circles_4_and_5"
        app:layout_constraintEnd_toStartOf="@id/circle5"
        app:layout_constraintStart_toEndOf="@id/circle4"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/connect_5_6"
        style="@style/connect_horizontal_small"
        android:layout_marginTop="110dp"
        android:contentDescription="@string/connect_circles_5_and_6"
        app:layout_constraintEnd_toStartOf="@id/circle6"
        app:layout_constraintStart_toEndOf="@id/circle5"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/connect_7_8"
        style="@style/connect_horizontal_small"
        android:layout_marginTop="220dp"
        android:contentDescription="@string/connect_circles_7_and_8"
        app:layout_constraintEnd_toStartOf="@id/circle8"
        app:layout_constraintStart_toEndOf="@id/circle7"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/connect_8_9"
        style="@style/connect_horizontal_small"
        android:layout_marginTop="220dp"
        android:contentDescription="@string/connect_circles_8_and_9"
        app:layout_constraintEnd_toStartOf="@id/circle9"
        app:layout_constraintStart_toEndOf="@id/circle8"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/connect_10_11"
        style="@style/connect_horizontal_small"
        android:layout_marginTop="330dp"
        android:contentDescription="@string/connect_circles_10_and_11"
        app:layout_constraintEnd_toStartOf="@id/circle11"
        app:layout_constraintStart_toEndOf="@id/circle10"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/connect_11_12"
        style="@style/connect_horizontal_small"
        android:layout_marginTop="330dp"
        android:contentDescription="@string/connect_circles_11_and_12"
        app:layout_constraintEnd_toStartOf="@id/circle12"
        app:layout_constraintStart_toEndOf="@id/circle11"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/connect_1_4"
        style="@style/connect_vertical_small"
        android:contentDescription="@string/connect_circles_1_and_4"
        app:layout_constraintBottom_toTopOf="@+id/circle4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circle1" />

    <ImageView
        android:id="@+id/connect_2_5"
        style="@style/connect_vertical_small"
        android:layout_marginStart="110dp"
        android:contentDescription="@string/connect_circles_2_and_5"
        app:layout_constraintBottom_toTopOf="@+id/circle5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circle2" />

    <ImageView
        android:id="@+id/connect_3_6"
        style="@style/connect_vertical_small"
        android:layout_marginStart="220dp"
        android:contentDescription="@string/connect_circles_3_and_6"
        app:layout_constraintBottom_toTopOf="@+id/circle6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circle3" />

    <ImageView
        android:id="@+id/connect_4_7"
        style="@style/connect_vertical_small"
        android:contentDescription="@string/connect_circles_4_and_7"
        app:layout_constraintBottom_toTopOf="@+id/circle7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circle4" />

    <ImageView
        android:id="@+id/connect_5_8"
        style="@style/connect_vertical_small"
        android:layout_marginStart="110dp"
        android:contentDescription="@string/connect_circles_5_and_8"
        app:layout_constraintBottom_toTopOf="@+id/circle8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circle5" />

    <ImageView
        android:id="@+id/connect_6_9"
        style="@style/connect_vertical_small"
        android:layout_marginStart="220dp"
        android:contentDescription="@string/connect_circles_6_and_9"
        app:layout_constraintBottom_toTopOf="@+id/circle9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circle6" />

    <ImageView
        android:id="@+id/connect_7_10"
        style="@style/connect_vertical_small"
        android:contentDescription="@string/connect_circles_7_and_10"
        app:layout_constraintBottom_toTopOf="@+id/circle10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circle7" />

    <ImageView
        android:id="@+id/connect_8_11"
        style="@style/connect_vertical_small"
        android:layout_marginStart="110dp"
        android:contentDescription="@string/connect_circles_8_and_11"
        app:layout_constraintBottom_toTopOf="@+id/circle11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circle8" />

    <ImageView
        android:id="@+id/connect_9_12"
        style="@style/connect_vertical_small"
        android:layout_marginStart="220dp"
        android:contentDescription="@string/connect_circles_9_and_12"
        app:layout_constraintBottom_toTopOf="@+id/circle12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circle9" />


    <ImageView
        android:id="@+id/circle1"
        style="@style/circle_small"
        android:contentDescription="@string/circle_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/circle2"
        style="@style/circle_small"
        android:layout_marginStart="65dp"
        android:contentDescription="@string/circle_2"
        app:layout_constraintStart_toEndOf="@+id/circle1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/circle3"
        style="@style/circle_small"
        android:layout_marginStart="65dp"
        android:contentDescription="@string/circle_3"
        app:layout_constraintStart_toEndOf="@+id/circle2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/circle4"
        style="@style/circle_small"
        android:layout_marginTop="65dp"
        android:contentDescription="@string/circle_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/circle1" />

    <ImageView
        android:id="@+id/circle5"
        style="@style/circle_small"
        android:layout_marginStart="65dp"
        android:layout_marginTop="65dp"
        android:contentDescription="@string/circle_5"
        app:layout_constraintStart_toEndOf="@+id/circle4"
        app:layout_constraintTop_toBottomOf="@id/circle2" />

    <ImageView
        android:id="@+id/circle6"
        style="@style/circle_small"
        android:layout_marginStart="65dp"
        android:layout_marginTop="65dp"
        android:contentDescription="@string/circle_6"
        app:layout_constraintStart_toEndOf="@+id/circle5"
        app:layout_constraintTop_toBottomOf="@id/circle3" />

    <ImageView
        android:id="@+id/circle7"
        style="@style/circle_small"
        android:layout_marginTop="65dp"
        android:contentDescription="@string/circle_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/circle4" />

    <ImageView
        android:id="@+id/circle8"
        style="@style/circle_small"
        android:layout_marginStart="65dp"
        android:layout_marginTop="65dp"
        android:contentDescription="@string/circle_9"
        app:layout_constraintStart_toEndOf="@+id/circle7"
        app:layout_constraintTop_toBottomOf="@+id/circle5" />

    <ImageView
        android:id="@+id/circle9"
        style="@style/circle_small"
        android:layout_marginStart="65dp"
        android:layout_marginTop="65dp"
        android:contentDescription="@string/circle_9"
        app:layout_constraintStart_toEndOf="@+id/circle8"
        app:layout_constraintTop_toBottomOf="@id/circle6" />

    <ImageView
        android:id="@+id/circle10"
        style="@style/circle_small"
        android:layout_marginTop="65dp"
        android:contentDescription="@string/circle_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/circle7" />

    <ImageView
        android:id="@+id/circle11"
        style="@style/circle_small"
        android:layout_marginStart="65dp"
        android:layout_marginTop="65dp"
        android:contentDescription="@string/circle_11"
        app:layout_constraintStart_toEndOf="@+id/circle10"
        app:layout_constraintTop_toBottomOf="@id/circle8" />

    <ImageView
        android:id="@+id/circle12"
        style="@style/circle_small"
        android:layout_marginStart="65dp"
        android:layout_marginTop="65dp"
        android:contentDescription="@string/circle_12"
        app:layout_constraintStart_toEndOf="@id/circle11"
        app:layout_constraintTop_toBottomOf="@id/circle9" />
</androidx.constraintlayout.widget.ConstraintLayout>