<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingEnd="32dp"
    android:paddingBottom="32dp"
    android:background="@drawable/dialog_shape"
    tools:ignore="RtlSymmetry">


    <Button
        android:id="@+id/settings"
        style="@style/pause_menu_button"
        android:text="@string/settings"
        android:backgroundTint="@color/blue1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/restart"
        style="@style/pause_menu_button"
        android:backgroundTint="@color/blue1"
        android:text="@string/restart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings" />

    <Button
        android:id="@+id/end_game"
        style="@style/pause_menu_button"
        android:text="@string/end_game"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restart"
        android:backgroundTint="@color/red1"/>
</androidx.constraintlayout.widget.ConstraintLayout>