<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_shape"
    android:paddingEnd="32dp"
    android:paddingBottom="32dp"
    tools:ignore="RtlSymmetry">

    <TextView
        android:id="@+id/tv_player_score"
        android:layout_width="110dp"
        android:layout_height="80dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/player_score_container"
        android:elevation="20dp"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tv_player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_player_score"
        app:layout_constraintEnd_toEndOf="@+id/tv_player_score"
        app:layout_constraintStart_toStartOf="@+id/tv_player_score" />


    <Button
        android:id="@+id/restart"
        style="@style/pause_menu_button"
        android:text="@string/restart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_player_score" />

    <Button
        android:id="@+id/home"
        style="@style/pause_menu_button"
        android:text="@string/home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restart" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textSize="56sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>